--- a/latest/index.html
+++ b/latest/index.html
@@ -1014,7 +1014,7 @@ string, it reads it as <code>byte</code> array.</p>
 <div class="listingblock">
 <div class="content">
 <pre class="pygments highlight"><code data-lang="clojure"><span class="tok-p">(</span><span class="tok-nf">fs/slurp-bytes</span> <span class="tok-s">&quot;/proc/cpuinfo&quot;</span><span class="tok-p">)</span>
-<span class="tok-o">#</span><span class="tok-nv">object</span><span class="tok-p">[</span><span class="tok-s">&quot;[B&quot;</span> <span class="tok-mi">0</span><span class="tok-nv">x19b8169d</span> <span class="tok-s">&quot;[B@19b8169d&quot;</span><span class="tok-p">]</span></code></pre>
+<span class="tok-c1">;; =&gt; #object[&quot;[B&quot; 0x19b8169d &quot;[B@19b8169d&quot;]</span></code></pre>
 </div>
 </div>
 </div>
@@ -1127,7 +1127,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-02-06 22:14:02 CET
+Last updated 2017-02-07 11:04:57 CET
 </div>
 </div>
 </body>
